deleting old client calls & code, wip machine stats notifications
