# handlers/user.go
@@ -924,72 +924,6 @@ func UserDashboardWatchlistAdd(w http.ResponseWriter, r *http.Request) {
 	OKResponse(w, r)
 }
 
-// UserClientsAdd godoc
-// @Summary  associates an ethereum or ethereum 2 client with an user
-// @Tags User
-// @Produce  json
-// @Param clientName body []string true "Valid client names are: lighthouse, prysm, nimbus, teku, geth, openeth, nethermind, besu"
-// @Param clientVersion body string true "Client version (github release api: release id) or 0 for unknown or no change."
-// @Param notify body boolean true "Receive client update notifications"
-// @Success 200 {object} types.ApiResponse
-// @Failure 400 {object} types.ApiResponse
-// @Failure 500 {object} types.ApiResponse
-// @Security ApiKeyAuth
-// @Router /api/v1/user/clients [post]
-func UserClientsAdd(w http.ResponseWriter, r *http.Request) {
-	SetAutoContentType(w, r)
-	j := json.NewEncoder(w)
-
-	clientName := FormValueOrJSON(r, "clientName")
-	clientVersion := FormValueOrJSON(r, "clientVersion")
-	notifyEnabled := FormValueOrJSON(r, "notify") == "true"
-
-	clientVersionNumber, err := strconv.ParseInt(clientVersion, 10, 64)
-	if err != nil {
-		logger.Errorf("error invalid client version number: %v: %v, %v", clientVersion, r.URL.String(), err)
-		ErrorOrJSONResponse(w, r, "Internal server error", http.StatusInternalServerError)
-		return
-	}
-
-	user := getUser(w, r)
-
-	err2 := db.UserClientEntry(user.UserID, clientName, clientVersionNumber, notifyEnabled)
-	if err2 != nil {
-		logger.Errorf("error inserting or updating client entry %v, %v", r.URL.String(), err2)
-		sendErrorResponse(j, r.URL.String(), "error inserting or updating client entry")
-		return
-	}
-
-	OKResponse(w, r)
-}
-
-// UserClientsDelete godoc
-// @Summary  deletes an ethereum or ethereum 2 client from a user
-// @Tags User
-// @Produce  json
-// @Param clientName body []string true "Valid client names are: lighthouse, prysm, nimbus, teku, geth, openethereum, nethermind, besu"
-// @Success 200 {object} types.ApiResponse
-// @Failure 400 {object} types.ApiResponse
-// @Failure 500 {object} types.ApiResponse
-// @Security ApiKeyAuth
-// @Router /api/v1/user/clients [delete]
-func UserClientsDelete(w http.ResponseWriter, r *http.Request) {
-	SetAutoContentType(w, r)
-	j := json.NewEncoder(w)
-
-	clientName := FormValueOrJSON(r, "clientName")
-	user := getUser(w, r)
-
-	err2 := db.UserClientDelete(user.UserID, clientName)
-	if err2 != nil {
-		logger.Errorf("error deleting client entry %v, %v", r.URL.String(), err2)
-		sendErrorResponse(j, r.URL.String(), "error deleting client entry")
-		return
-	}
-
-	OKResponse(w, r)
-}
-
 // UserValidatorWatchlistRemove godoc
 // @Summary  unsubscribes a user from a specific validator
 // @Tags User
